# uf-dshot

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: CI.yml
examples/: local_command.rs  local_decode.rs  local_simple.rs
examples/bdshot-simple-stm32/: Cargo.toml  justfile
examples/bdshot-simple-stm32-direct/: Cargo.toml  justfile
examples/bdshot-simple-stm32-direct/src/: bidir_capture.rs  embassy_stm32.rs  embassy_stm32_bidir_capture.rs  main.rs
examples/bdshot-simple-stm32/src/: main.rs
examples/bdshot-stm32/: Cargo.toml  justfile  rust-toolchain.toml
examples/bdshot-stm32/src/: main.rs
examples/bdshot-validate-stm32/: Cargo.toml  Embed.toml  justfile
examples/bdshot-validate-stm32-safe/: Cargo.toml  justfile
examples/bdshot-validate-stm32-safe/src/: main.rs
examples/bdshot-validate-stm32/src/: fmt.rs  main.rs
examples/dshot-dma-stm32/: Cargo.toml  justfile  rust-toolchain.toml
examples/dshot-dma-stm32/.cargo/: config.toml
examples/dshot-dma-stm32/src/: main.rs
examples/dshot-simple-stm32/: Cargo.toml  justfile
examples/dshot-simple-stm32/src/: main.rs
examples/dshot-simplepwm-stm32/: Cargo.toml  justfile
examples/dshot-simplepwm-stm32/src/: main.rs
examples/dshot-stm32/: Cargo.toml  justfile
examples/dshot-stm32/src/: main.rs
examples/dshot-validate-stm32/: Cargo.toml  justfile
examples/dshot-validate-stm32/.cargo/: config.toml
examples/dshot-validate-stm32/src/: main.rs
src/: bidir.rs  bidir_capture.rs  bit_banging.rs  command.rs  common.rs  driver.rs  dshot.rs  embassy_stm32.rs  embassy_stm32_bf_compat.rs  embassy_stm32_bidir_capture.rs  lib.rs  telemetry.rs
src/embassy/: mod.rs  traits.rs
src/embassy/stm32/: bidir_line.rs  controller.rs  mod.rs  rx_dma.rs  tx_dma.rs
src/mock/: controller.rs  link.rs  mod.rs
src/proto/: mod.rs
src/proto/bitbang_bf/: core.rs  mod.rs  stm32.rs
src/proto/bitbang_bf_safe/: mod.rs  stm32.rs
src/proto/pwm_capture_bf/: core.rs  decode.rs  mod.rs  stm32.rs
