[package]
name = "uf-dshot"
version = "0.1.0"
edition = "2021"
authors = ["Nickolai Novik <nickolainovik@gmail.com>"]
license = "Apache-2.0"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embassy-sync = { version = "0.7.2", optional = true }
embassy-time = { version = "0.5.0", optional = true }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-stm32-hal = { package = "embassy-stm32", version = "0.6.0", default-features = false, optional = true }

[features]
default = []
"defmt" = ["dep:defmt"]
"embassy-stm32" = ["dep:embassy-stm32-hal", "dep:embassy-sync", "dep:embassy-time"]
"pwm-capture-bf" = []
