[package]
name = "uf-dshot"
version = "0.1.0"
edition = "2021"
authors = ["Mykola Novik <nickolainovik@gmail.com>"]
license = "GPL-3.0"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embassy-sync = { version = "0.8.0", optional = true }
embassy-time = { version = "0.5.0", optional = true }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-stm32-hal = { package = "embassy-stm32", version = "0.6.0", default-features = false, optional = true }

[features]
default = []
"defmt" = ["dep:defmt"]
"embassy-stm32" = [
  "dep:embassy-stm32-hal",
  "dep:embassy-sync",
  "dep:embassy-time",
]
